benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/debug/bignum_ModExp_DivMod_Mul_iter2_error.log
=== Verification Error - Iteration 2 ===
File: benchmarks/verus/bignum/files/bignum_ModExp_DivMod_Mul.rs
Time: 2025-09-15 11:07:26

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_Mul_impl.rs:87:30
   |
87 |         let rest = ModExp(x, (y - 1) as nat, m);
   |                              ^^^^^^^^^^^^^^

error[E0425]: cannot find value `res` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_Mul_impl.rs:78:9
   |
78 |         res == Exp_int(x, y) % m
   |         ^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.

--------------------------------------------------------------------------------

Additional Output:
error: The Verus types 'nat' and 'int' can only be used in ghost code (e.g., in a 'spec' or 'proof' function, inside a 'proof' block, or when assigning to a 'ghost' or 'tracked' variable)
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_Mul_impl.rs:87:30
   |
87 |         let rest = ModExp(x, (y - 1) as nat, m);
   |                              ^^^^^^^^^^^^^^

error[E0425]: cannot find value `res` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_Mul_impl.rs:78:9
   |
78 |         res == Exp_int(x, y) % m
   |         ^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
